--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
-shimeket alemayehu <shimeketa@gmail.com>
-ayomide kappo <ayomidekappo34@gmail.com>
+Bello Abdulsamad <Belloabdulsamad26@gmail.com>
+Melvin Enwerem <enweremmelvinconfidence@gmail.com
