--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all contributors to the repository.
+# This file lists all individuals having contributed content to the repository.
 
-Bello Abdulsamad <Belloabdulsamad26@gmail.com>
-Melvin Enwerem <enweremmelvinconfidence@gmail.com
+Bello abdulsamad <belloabdulsamad26@gmail.com>
+Melvin Enwerem Confidence <enweremmelvinconfidence@gmail.com>
